<resources>
    <string name="app_name">Buveurs</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="writing">글쓰기</string>
    <string name="mypage">마이페이지</string>
    <string name="soju">소주</string>
    <string name="beer">맥주</string>
    <string name="makgeolli">막걸리</string>
    <string name="wine">와인</string>
    <string name="liquor">양주</string>
    <string name="ect">기타</string>
    <string name="complete">완료</string>
    <string name="alcoholcategory">술종류</string>
    <string name="alcoholname">술이름</string>
    <string name="alcoholpicture">술사진</string>
    <string name="starscore">별점</string>
    <string name="buveurs">Buveurs</string>
    <string name="login">로그인</string>
    <string name="id">이메일주소</string>
    <string name="password">패스워드</string>
    <string name="signup">회원가입</string>
    <string name="loginfail">로그인실패</string>
    <string name="nickname">닉네임</string>
    <string name="passwordpattern">패스워드(6~12자)</string>
    <string name="alcoholintro">간단 소개</string>
    <string name="alcoholsnack">어울리는 안주</string>
    <string name="delete">삭제</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
