<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/baseline_home_black_36"
        android:enabled="true"
        android:title="@string/home"
        />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_black_36"
        android:enabled="true"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_writing"
        android:icon="@drawable/baseline_create_black_36"
        android:enabled="true"
        android:title="@string/writing"/>
    <item
        android:id="@+id/action_mypage"
        android:icon="@drawable/baseline_person_black_36"
        android:enabled="true"
        android:title="@string/mypage"/>
</menu>