<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/topView" android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/topViewguide"
        android:background="@drawable/loginrounded"

        />
    <TextView
        android:text="@string/buveurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtv_Title"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/centerViewTopGuid"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/centerView"
        app:layout_constraintTop_toTopOf="@+id/centerViewTopGuid"
        app:layout_constraintBottom_toBottomOf="@id/centerViewBottomGuide"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        app:layout_constraintEnd_toEndOf="@+id/centerViewRightGuide"
        android:background="@drawable/logincenterviewrounded"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

    </View>
    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/topViewguide"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        app:layout_constraintEnd_toEndOf="@+id/centerViewRightGuide"
        android:textColor="@color/colorCyan"
        android:textSize="30sp"
        android:id="@+id/txtv_Main"/>
    <TextView
        android:text="@string/id"
        android:textColor="@color/colorCyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtv_Main"
        app:layout_constraintStart_toStartOf="@id/centerViewLeftGuide"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:id="@+id/txtv_id"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="16sp"
        android:id="@+id/edt_ID"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintStart_toStartOf="@id/centerViewLeftGuide"
        app:layout_constraintEnd_toEndOf="@id/centerViewRightGuide"
        android:hint="id"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@+id/txtv_id"
        />
    <View
        android:id="@+id/id_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="@+id/centerViewRightGuide"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        android:background="@color/colorCyan"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_ID"/>
    <TextView
        android:text="@string/password"
        android:textColor="@color/colorCyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/id_line"
        app:layout_constraintStart_toStartOf="@id/centerViewLeftGuide"
        android:layout_marginStart="50dp"
        android:id="@+id/txtv_password"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="16sp"
        android:id="@+id/edt_Password"
        android:hint="@string/password"
        android:background="@null"
        app:layout_constraintStart_toStartOf="@id/centerViewLeftGuide"
        app:layout_constraintEnd_toEndOf="@id/centerViewRightGuide"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtv_password"
        />
    <View
        android:id="@+id/password_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="@+id/centerViewRightGuide"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        android:background="@color/colorGreen"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_Password"/>

    <TextView
        android:text="@string/loginfail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtv_Fail"
        android:textColor="#F44336"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        app:layout_constraintTop_toBottomOf="@+id/password_line"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Login"
        app:layout_constraintTop_toBottomOf="@id/password_line"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        app:layout_constraintEnd_toEndOf="@+id/centerViewRightGuide"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/loginbuttonrounded"
        android:textColor="@android:color/white"/>

    <TextView
        android:text="@string/signup"
        android:textColor="@color/colorCyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login"
        app:layout_constraintStart_toStartOf="@+id/centerViewLeftGuide"
        app:layout_constraintEnd_toEndOf="@id/centerViewRightGuide"
        android:id="@+id/txtv_SignUp"/>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/topViewguide"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="0dp"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerViewLeftGuide"
        app:layout_constraintGuide_percent="0.03"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerViewRightGuide"
        app:layout_constraintGuide_percent="0.97"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerViewTopGuid"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerViewBottomGuide"
        app:layout_constraintGuide_percent="0.92"
        android:orientation="horizontal"/>


</androidx.constraintlayout.widget.ConstraintLayout>