<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.DetailViewFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailTopGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailStartGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailEndGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91"/>

    <ImageButton
        android:id="@+id/detailViewBackImageButton"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailTopGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />
    <TextView
        android:id="@+id/detailViewtxtvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writing"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/detailTopGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/detailTopGuide" />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/detailStartGuide"
        app:layout_constraintEnd_toEndOf="@id/detailEndGuide"
        app:layout_constraintTop_toBottomOf="@+id/detailView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/detailImageAlcohol"
                    android:layout_marginRight="20dp"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/outline_photo_black_48" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txtvStar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="맛 평가"
                        android:textSize="22sp"
                        android:layout_marginTop="30dp"
                        android:textColor="@android:color/black"/>

                    <RatingBar
                        android:id="@+id/detailRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="0"
                        android:layout_marginTop="20dp"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:theme="@style/RatingBar"
                        android:stepSize="0.5" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/detailPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="가격"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/detailTxtvAlcoholPrice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:textSize="16sp"
                android:ems="10"
                android:maxLength="30"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/alcoholintro"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/detailTxtvAlcoholIntro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:textSize="16sp"
                android:ems="10"
                android:maxLength="30"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/txtvSnack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/alcoholsnack"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detailTxtvAlcoholSnack"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="start|center"
                android:ems="10"
                android:maxLength="30"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtvComent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="댓글"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/detailEdtComment"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:maxLength="30"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/coment_background"/>

                <Button
                    android:id="@+id/detailBtnWrite"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:background="@color/colorCyan"
                    android:textColor="@android:color/white"
                    android:text="작성" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>